# dotfiles

./: .bashrc  .clang-format  .editorconfig  .gitconfig  .gitignore  .mbsyncrc  .msmtprc  .neovimrc  .offlineimaprc  .profile  .sbclrc  .spacemacs  .spacemacs.custom  .spacemacs.custom.el  .tmux.conf  .tmuxline.snapshot  .tmuxline.tmux.conf  .vimrc  .vimrc.before  .xvimrc  .ycm_extra_conf.py  .zshenv  .zshrc  README.md  emacs.service  make.sh  redshift.conf
.doom.d/: +magit.el  +org.el  +reason.el  +ruby.el  +twitter.el  +ui.el  init.el
.oh-my-zsh.d/themes/: jv-custom.zsh-theme
.spacemacs.d/: .spacemacs.custom  init.el
.spacemacs.d/custom/: user-config.el  user-init.el
.spacemacs.d/jv/: packages.el
.spacemacs.d/jv-cpp/: config.el  funcs.el  packages.el
.spacemacs.d/jv-elfeed/: funcs.el  packages.el
.spacemacs.d/jv-mu4e/: README.org  packages.el
.spacemacs.d/jv-org/: packages.el
.spacemacs.d/jv-slack/: packages.el
.spacemacs.d/private/: packages.el
.spc_private/mycontribs/: extensions.el  packages.el
.spc_private/snippets/: snippets
.tmuxp/: professionalcpp.yml
.vim/: autocmd.vim  bundles.vim  colors.vim
.vim/settings/: NERDTree.vim  airline.vim  startify.vim  tmux.vim  unite.vim  vim-go.vim
Common/: .Xresources  .bash_profile  .bashrc  .clang-tidy  .clang_complete  .editorconfig  .emacs-profiles.el  .inputrc  .mbsyncrc  .msmtprc  .offlineimap.py  .offlineimaprc  .profile  .ripgreprc  .rustfmt.toml  .sbclrc  .tidyrc  .tmux-linux.conf  .tmux-macos.conf  .tmux.conf  .ycm_extra_conf.py  .zprofile  .zshenv  .zshrc  alacritty.yml  compile_flags.txt  starship.toml
Common/.bin/: brew_update.sh  color_test.sh  common.sh  cpp.sh  create_cpp_project.sh  create_rust_project.sh  dmxs.sh  doom_sync.sh  doom_upgrade.sh  dotfiles.sh  dotfiles_make.sh  fedora.sh  firefox.sh  go.sh  go_update.sh  mac.sh  mac_update.sh  project.sh  rust.sh  rust_update.sh  ubuntu.sh  ubuntu_update.sh  zig.sh
Common/.bin/cpp_project_template_cmake/: .dir-locals.el  CMakeLists.txt  Readme.org
Common/.bin/cpp_project_template_cmake/cmake/: ClangTools.cmake
Common/.bin/cpp_project_template_cmake/include/: benchmarking.hpp  func_utils.hpp  functional.hpp  gtest_cout.hpp  math.hpp  ostream_joiner.hpp  pcout.hpp  perf_timer.hpp  print.hpp  smart_pointers.hpp  string_utils.hpp  strings.hpp  unique_ptr_cast.hpp  utils.hpp
Common/.bin/cpp_project_template_cmake/src/app/: CMakeLists.txt
Common/.doom.d/: +bindings.el  +config.el  +early-init.el  +hydras.el  +packages.el  +ui.el  autoload.el  config.el  custom.el  init.el  packages.el
Common/alacritty/: .gitignore  alacritty.toml  alacritty.yml  alacrity-modus-operandi.toml
Common/applications/: emacs.desktop  emacsclient.desktop  foot-server.desktop  footclient.desktop  thinkorswim.desktop
Common/btop/: .gitignore  btop.conf
Common/clangd/: config.yaml
Common/claude/: CLAUDE.md  settings.json
Common/containers/: containers.conf
Common/doom/: +bindings.el  +config.el  +early-init.el  +ui-modus-exporter.el  +ui.el  autoload.el  config.el  custom.el  init.el  packages.el
Common/doom-vanilla/: +bindings.el  +config.el  +early-init.el  +ui.el  autoload.el  config.el  init.el  packages.el
Common/foot/: foot.ini  foot.template.ini
Common/ghostty/: config
Common/git/: commit_template  commit_template_simple  config
Common/gopass/: config
Common/i3/: config  i3Status.conf
Common/interception/: dual-function-keys.yaml  udevmon.yaml
Common/keyd/: .gitignore  app.conf  default.conf
Common/nushell/: .gitignore  config.nu
Common/nvim/: .gitignore  init.lua  init.vim
Common/nyxt/: .gitignore  config.lisp  init.lisp
Common/prelude/: 01_init.el  02_ui.el  03_neotree.el  init.el  (+4 more)
Home/: .ccls  .clang-format  .gitconfig  .jshintrc  .msmtprc  .offlineimap.py  .rustfmt.toml  .sbclrc  .tmux.conf  .zshenv  .zshrc  Brewfile
Misc/: .clang-format  .clang-tidy  .clangd  .rustfmt.toml  CMakeLists.clang.txt  CMakeLists.g++.txt  CMakeLists.gcc.txt  compile_flags.clang.txt  compile_flags.g++.txt  compile_flags.gcc.fedora.txt  compile_flags.gcc.suse.txt  compile_flags.gcc.txt  compile_flags.txt
Misc/templates/cpp_project_template/: .dir-locals.el  .gitignore  CMakeLists.txt  Makefile  Readme.org
Misc/templates/cpp_project_template/cmake/: Boost.cmake  Catch2.cmake  CppUtils.cmake  GoogleBenchmark.cmake  GoogleTest.cmake
Misc/templates/cpp_project_template/include/: algorithms.hpp  chrono.hpp  collections.hpp  diagnostics.hpp  functional.hpp  gtest_cout.hpp  hash.hpp  iterators.hpp  math.hpp  polyfill.hpp  print.hpp  scope_guard.hpp  smart_pointers.hpp  strings.hpp  testing.hpp  threading.hpp  unique_handler.cpp  unused.hpp
Misc/templates/cpp_project_template/include/libmath/: libmath.hpp
Misc/templates/cpp_project_template/src/: CMakeLists.txt
Misc/templates/cpp_project_template/src/app/: CMakeLists.txt  bench.cpp  tests.cpp
Misc/templates/cpp_project_template/src/libmath/: CMakeLists.txt  libmath.cpp
Misc/templates/cpp_project_template/test/: CMakeLists.txt  libmath_tests.cpp
Misc/templates/cpp_project_template/tools/: CMakeLists.txt
Misc/templates/cpp_project_template/tools/benchmarks/: CMakeLists.txt  bench.cpp
Misc/templates/cpp_project_template/tools/examples/: CMakeLists.txt  math.cpp  utils.cpp
Misc/templates/sfml_project_template/: .clang-tidy  .dir-locals.el  .gitignore  CMakeLists.txt  Makefile  Readme.org  compile_flags.txt
Misc/templates/sfml_project_template/include/: ResourcePath.hpp  chrono.hpp  collections.hpp  iterators.hpp  math.hpp  print.hpp  strings.hpp  unused.hpp
Misc/templates/sfml_project_template/src/Minimal/: CMakeLists.txt
Misc/templates/sfml_project_template/src/Minimal/media/apple/: Info.plist
Misc/templates/sfml_project_template/src/Minimal/source/: main.cpp
Misc/templates/sfml_project_template/src/utils/: ResourcePath.cpp  ResourcePath.mm
Nix/: home.nix
Personal/: .fzf.zsh  Brewfile
Work/: .ccls  .clang-format  .editorconfig  .fzf.zsh  .gitconfig  .jsbeautifyrc  .rustfmt.toml  .sbclrc  .tmux.conf  .zshenv  .zshrc
i3/: config  i3status.conf
nvim/: init.vim
(+642 files in other folders)
